# privacy-enabled-agents

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  agent.py  agent_test.ipynb  app.py  compose.yml  docker-compose.yml  eval.compose.yml  expose.md  konzept.md  logconf.yaml  main.py  pii.py  pyproject.toml  renovate.json5  ruff.toml  tasks.md  test_remote_gliner.py
.github/workflows/: codeql.yml  dependency-review.yml  docker-release.yml  ruff.yml  scorecard.yml
agents/: basic_agent.py  websearch_agent.py
data/: finance_initial_accounts.csv  medical_sample_patients.csv  public_service_sample_citizens.csv
eval_configs/: finance.yaml  medical.yaml  public_service.yaml
gliner-api-configs/: general_config.yaml  medical_config.yaml  pii+phi_quantized.yaml  pii_config.yaml  quantized_no-entities.yaml
notebooks/: agent_test.ipynb  langfuse_test.ipynb  llm_test.ipynb  prep_german_license_plates.ipynb  remote_gliner_test.ipynb  validate_finance_evalset.ipynb  validate_medical_evalset.ipynb  validate_public-service_evalset.ipynb
privacy_enabled_agents/: __init__.py  base.py
privacy_enabled_agents/agents/: basic_agent.py  websearch_agent.py
privacy_enabled_agents/chat_models/: __init__.py  privacy_wrapper.py
privacy_enabled_agents/custom_types/: __init__.py  german_id_number.py  german_license_plate.py  german_medical_insurance_id.py
privacy_enabled_agents/detection/: __init__.py  base.py  gliner.py  regex.py  remote_gliner.py
privacy_enabled_agents/eval/: __init__.py  config.py  runner.py
privacy_enabled_agents/examples/: __init__.py
privacy_enabled_agents/examples/basic/: __init__.py  agent.py
privacy_enabled_agents/examples/finance/: agent.py  model.py  tools.py
privacy_enabled_agents/examples/medical/: agent.py  model.py  tools.py
privacy_enabled_agents/examples/public_service/: agent.py  model.py  tools.py
privacy_enabled_agents/examples/websearch/: agent.py  tools.py
privacy_enabled_agents/frontend/: gradio.py  helpers.py  streamlit.py
privacy_enabled_agents/replacement/: __init__.py  base.py  encryption.py  hash.py  placeholder.py  placeholders.py  pseudo.py  pseudonym.py
privacy_enabled_agents/runtime/: __init__.py  agent.py  builder.py  config.py
privacy_enabled_agents/storage/: __init__.py  base.py  encryption.py  memory.py  valkey.py
privacy_enabled_agents/storage/conversation/: __init__.py  base.py  valkey.py
privacy_enabled_agents/storage/entity/: __init__.py  base.py  encryption.py  valkey.py
privacy_enabled_agents/tools/: medical.py
privacy_enabled_agents/topics/: __init__.py  base.py
privacy_enabled_agents/topics/basic/: __init__.py  factory.py
privacy_enabled_agents/topics/finance/: __init__.py  eval.py  factory.py  model.py  tools.py
privacy_enabled_agents/topics/medical/: __init__.py  eval.py  factory.py  model.py  tools.py
privacy_enabled_agents/topics/public_service/: __init__.py  eval.py  factory.py  model.py  tools.py
privacy_enabled_agents/topics/websearch/: __init__.py  factory.py  tools.py
src/: data_models.py  medical_detection.py  pii_detection.py
src/agents/: basic_agent.py  websearch_agent.py
tests/storage/: test_valkey.py  valkey_test.py
