[project]
name = "privacy-enabled-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "fastapi[standard]==0.120.4",
    "langchain-openai==1.0.3",
    "langchain==1.0.8",
    "langgraph==1.0.3",
    "python-dotenv==1.2.1",
    "langfuse==3.8.1",
    "truststore==0.10.4",
    "pydantic==2.11.10",
    "pydantic-extra-types==2.10.6",
    "phonenumbers==9.0.19",
    "valkey==6.1.1",
    "faker==38.2.0",
    "cryptography==46.0.3",
    "langgraph-checkpoint-redis==0.1.2",
    "stamina==25.1.0",
    "langchain-mistralai==1.0.1",
    "langgraph-cli==0.4.7",
    "schwifty==2025.9.0",
    "geopy==2.4.1",
    "ddgs==9.6.1",
    "gradio==5.49.1",
    "pydantic-settings==2.11.0",
    "pyyaml==6.0.3",
    "pandas==2.3.3",
    "orjson==3.11.4",
    "langchain-tavily==0.2.13",
]

[dependency-groups]
dev = [
    "jupyter==1.1.1",
    "pre-commit==4.3.0",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "ruff==0.14.6",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
add-bounds     = "exact"
index-strategy = "unsafe-best-match"
