[project]
name = "privacy-enabled-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "fastapi[standard]==0.124.4",
    "langchain-openai==0.3.32",
    "langchain==0.3.27",
    "langgraph==0.6.6",
    "python-dotenv==1.2.1",
    "langfuse==3.10.6",
    "truststore==0.10.4",
    "pydantic==2.12.5",
    "pydantic-extra-types==2.10.5",
    "phonenumbers==9.0.13",
    "valkey==6.1.1",
    "faker==37.12.0",
    "cryptography==45.0.7",
    "langgraph-checkpoint-redis==0.3.0",
    "stamina==25.2.0",
    "langchain-mistralai==0.2.11",
    "langgraph-cli==0.4.2",
    "schwifty==2025.9.0",
    "geopy==2.4.1",
    "ddgs==9.9.3",
    "gradio==5.50.0",
    "pydantic-settings==2.12.0",
    "pyyaml==6.0.2",
    "pandas==2.3.2",
    "orjson==3.11.3",
]

[dependency-groups]
dev = [
    "jupyter==1.1.1",
    "pre-commit==4.5.0",
    "pytest==8.4.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.14.6",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
add-bounds     = "exact"
index-strategy = "unsafe-best-match"
